Changelog
=========

1.1 (unreleased)
----------------
- Updated diazo theme manifest file [macagua]
- Added preview file for diazo theme manifest file [macagua]
- unused rules removed [giacomos]
- fixes doctype [giacomos]

1.0 (2011-06-18)
----------------

- Initial release [giacomos]