@@ -3,6 +3,7 @@ Changelog
 
 1.1 (unreleased)
 ----------------
+- Added support for clean uninstallation using GenericSetup profile [macagua]
 - Updated diazo theme manifest file [macagua]
 - Added preview file for diazo theme manifest file [macagua]
 - unused rules removed [giacomos]
